--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🦀 Ferris-8 - Émulateur Chip-8</title>
+    <title>Ferris-8 - Émulateur Chip-8</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
