feat: add search functionality to ROM dropdown and style updates

--- a/web/index.html
+++ b/web/index.html
@@ -58,7 +58,12 @@
                                     <span class="dropdown-arrow">▼</span>
                                 </div>
                                 <div class="dropdown-menu" id="dropdown-menu">
-                                    <!-- Options will be populated by JS -->
+                                    <div class="dropdown-search">
+                                        <input type="text" id="rom-search" placeholder="🔍 Rechercher une ROM..." autocomplete="off">
+                                    </div>
+                                    <div class="dropdown-content" id="dropdown-content">
+                                        <!-- Options will be populated by JS -->
+                                    </div>
                                 </div>
                             </div>
                             <button id="btn-load-selected-rom" class="btn btn-primary btn-small" disabled>Charger</button>
